@startuml
skinparam classAttributeIconSize 0

class RemoveCourierUI {

}

class RemoveCourierController {
  +List<Pharmacy> getPharmaciesList()
  +List<Courier> getCourierList(pharEmail)
  +getCourier(emailCourier)
  +getUser(emailCourier)
  +getEmailPharmacy(Pharmacy phar)
  +getEmailCourier(Courier cour)
  +removeCourier()
  +removeUser()
}

class PharmacyDB {
  +List<Pharmacy> getAllPharmacies()
  +Pharmacy getPharmacy(PharmacyEmail)
}

class CourierDB {
  +List<Courier> getAllCouriersOfPharmacy(pharEmail)
  +getCourier(emailCourier)
  +removeCourier(emailCourier)
}

class UserDB{
    +getUser(emailCourier)
    +removeUser(email)
}

class User{
    -String name
    -String email
    -String password
    +remove()
    +getEmail()
}

class Courier {
  -String name
  -String email
  -Integer phoneNumber
  -Integer socialSecurityNumber
  -Integer nif
  -String status
  +remove()
  +String getEmail()
}

class Pharmacy {
  -String designation
  -Adress adress
  -Integer parkMax
  +String getEmail()
}

class Administrator {
  -String email
}

RemoveCourierUI ..> RemoveCourierController
RemoveCourierController ..> PharmacyDB
RemoveCourierController ..> Courier
RemoveCourierController ..> Pharmacy
RemoveCourierController ..> CourierDB
RemoveCourierController ..> UserDB
RemoveCourierController ..> User
Courier ..> CourierDB
User ..> UserDB

Administrator "1" --> "*" Courier : remove

Pharmacy "1" -- "*" Courier : has >

Courier "1" -- "1" User :is >

@enduml
